# index.js
@@ -2,6 +2,7 @@ const express = require ('express')
 const app = express()
 const database = require('./database/database')
 const booksRoutes = require('./routes/books')
+const userRoutes = require('./routes/user')
 const cors = require('cors')
 const swaggerDoc = require('./swagger-output.json')
 const swaggerUi = require('swagger-ui-express')
@@ -16,6 +17,8 @@ app.use(express.json())
 
 app.use('/books', booksRoutes)
 
+app.use('/user',userRoutes)
+
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDoc))
 
 const port = process.env.PORT
@@ -23,7 +26,7 @@ const port = process.env.PORT
 app.get('/', (req, res) =>{
     res.send("Hello World")
 })
-
+//middlware
 app.use((err, req, res, next) =>{
     console.error(err.stack)
     res.status(500).json({error: err.message})
