# models/userModel.js
@@ -1,0 +1,9 @@
+const mongoose = require('mongoose')
+
+const userSchema = new mongoose.Schema({
+    userName: {type:String, required: true, unique:true},
+    email: {type:String, required: true, unique:true},
+    password :{type:String, required: true}
+})
+
+module.exports = mongoose.model('User', userSchema)
